# PDS

./: CMakeLists.txt  Makefile  README.md  compute_knn.py  generate_points.py  knn_ff.cpp  knn_omp.cpp  knn_parallel.cpp  knn_plot.py  knn_sequential.cpp  utilities.cpp  utilities.h  utimer.cpp
datasets/: points.txt  points_100k.txt  points_10k.txt  points_20k.txt  points_50k.txt  points_5k.txt
report/: main.tex
report/chapters/: conclusions.tex  implementation.tex  introduction.tex  results.tex  run.tex
